<resources>
    <string name="app_name">Grup Musik App</string>
    <string name="index_">Linkin Park</string>
    <string name="isi_1">Linkin Park adalah grup musik beraliran nu metal dan rock alternatif yang berasal dari Agoura Hills, California, di Amerika Serikat. Mereka sempat beberapa kali berganti nama, antara lain Xero, Hybrid Theory, hingga nama Linkin Park sampai sekarang.   </string>
    <string name="isi_2">Nama \\\"Linkin Park\\\" sendiri merupakan plesetan dari nama sebuah taman di Los Angeles, Lincoln Park.         Sebelum Chester Bennington menjadi vokalis Linkin Park, Mark Wakefield lebih dulu menjadi vokalisnya.</string>
    <string name="isi_3">Namun, ia keluar dari Linkin Park untuk mencari proyek lain (menjadi manajer grup band Taproot)– saat itu menggunakan nama Hybrid Theory untuk menjadi manajer grup musik Taproot. Bassis Dave Farrell alias \\\"Phoenix\\\" juga pernah keluar sebentar dari Linkin Park untuk mengikuti tur bersama band lamanya, Tasty Snax. Sedangkan 4 personel lainnya Brad Delson, Mike Shinoda, Joe Hahn, dan Rob Bourdon selalu bertahan di Linkin Park sejak awal pembentukannya.</string>
    <string name="isi_4">Linkin Park telah merilis 6 album studio, yaitu Hybrid Theory, Meteora, Minutes to Midnight, A Thousand Suns, Living Things, The Hunting Party dan One More Light. Linkin Park juga merilis album Live in Texas, Reanimation, dan Collision Course, serta Hybrid Theory EP. Linkin Park sukses dalam memopulerkan lagu-lagunya seperti Crawling, In the End, Numb, Somewhere I Belong, dan What I\\\'ve Done. Secara total, album-album Linkin Park telah terjual sebanyak 50 juta keping</string>
</resources>
