<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="dicoding.veri.scrollview.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#460606"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/index_"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:layout_marginBottom="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:src="@drawable/linkinpark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/isi_1"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/isi_2"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/isi_3"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/isi_4"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <com.google.android.youtube.player.YouTubePlayerView
                android:id="@+id/youtube_player"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"></com.google.android.youtube.player.YouTubePlayerView>
            <com.google.android.youtube.player.YouTubePlayerView
                android:layout_width="match_parent"
                android:id="@+id/youtube_player2"
                android:layout_height="180dp"
                android:layout_marginBottom="30dp"></com.google.android.youtube.player.YouTubePlayerView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

